# claude_do

./: pyproject.toml
src/claude_do/: __init__.py  chat_completion.py  claude_do.py
